# ItsEulerTime

./: .gitignore
C/: Makefile  README.md
C/src/: 001.c  002.c
Haskell/: 1.hs  11.hs  14.hs  2.hs  3-hs-wiki.hs  3.hs  4.hs  5.hs  6.hs  7.hs  euler.cabal  samples.html
Haskell/app/: Main.hs  MainBench.hs
Haskell/src/: 003-hs-wiki.hs  008.hs  009.hs  Lib.hs  P001.hs  P002.hs  P003.hs  P004.hs  P005.hs  P006.hs  P007.hs  P008.hs  P009.hs  P010.hs  P011.hs  P012.hs  P013.hs  P014.hs  P015.hs  P016.hs  P017.hs  P018.hs  P019.hs  P020.hs  P021.hs  P022.hs  P023.hs  P024.hs  P025.hs  P026.hs  P027.hs  P028.hs  P029.hs  P030.hs  P031.hs  P032.hs  P033.hs  P034.hs  P035.hs  P036.hs  (+51 more)
Haskell/test/: LibSpec.hs  P001Spec.hs  P002Spec.hs  P003Spec.hs  P004Spec.hs  P005Spec.hs  P006Spec.hs  P007Spec.hs  P008Spec.hs  P009Spec.hs  P010Spec.hs  P011Spec.hs  P012Spec.hs  P013Spec.hs  P014Spec.hs  P015Spec.hs  P016Spec.hs  P017Spec.hs  P018Spec.hs  P019Spec.hs  P020Spec.hs  P021Spec.hs  P022Spec.hs  P023Spec.hs  P024Spec.hs  P025Spec.hs  P026Spec.hs  P027Spec.hs  P028Spec.hs  P029Spec.hs  P030Spec.hs  P031Spec.hs  P032Spec.hs  P033Spec.hs  P034Spec.hs  P035Spec.hs  P036Spec.hs  P037Spec.hs  P038Spec.hs  P039Spec.hs  (+47 more)
Julia/: 001.jl  002.jl  003.jl  004.jl  006.jl  008.jl  017.jl  018.jl  020.jl  025.jl  029.jl  036.jl  051.jl  euler_helpers.jl  tester.py
Julia/001/: 001.jl
Julia/002/: 002.jl
Julia/003/: 003.jl
Julia/004/: 004.jl
Julia/005/: 005.jl
Julia/007/: 007.jl
Julia/009/: 009.jl
Julia/010/: 010.jl
Julia/011/: 011.jl
Julia/019/: 019.jl
Julia/021/: 021.jl
Julia/022/: 022.jl
Julia/023/: 023.jl
Julia/024/: 024.jl
Julia/025/: 025.jl
Julia/026/: 026.jl
Julia/030/: 030.jl
Julia/034/: 034.jl
Julia/035/: 035.jl
Julia/036/: 036.jl
Julia/037/: 037.jl
Julia/038/: 038.jl
Julia/067/: 067.jl
clojure-euler/: project.clj
clojure-euler/src/clojure_euler/: core.clj
