name:                euler
version:             0.1.0.0
synopsis:            a program to solve project Euler problems
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Sean J Williamson
maintainer:          sean.j.williamson@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ZeroZeroOne
                     , ZeroZeroTwo
                     , ZeroZeroThree
                     , ZeroZeroFour
                     , ZeroZeroFive
                     , ZeroZeroSix
                     , ZeroZeroSeven
                     , ZeroZeroEight
                     , ZeroZeroNine
                     , ZeroOneZero
                     , ZeroOneOne
                     , ZeroOneTwo
                     , ZeroOneThree
                     , ZeroOneFour
                     , ZeroOneFive
                     , ZeroOneSix
                     , ZeroOneSeven
                     , ZeroOneEight
                     , ZeroOneNine
                     , ZeroTwoZero
                     , ZeroTwoOne
                     , ZeroTwoTwo
                     , ZeroTwoThree
                     , ZeroTwoFour
                     , ZeroTwoFive
  build-depends:       base       >= 4.7 && < 5
                     , criterion  >= 1.1.0
                     , primes     >= 0.2.1
                     , containers >= 0.5.5
                     , parallel   >= 3.2
                     , time       >= 1.4.2
                     , containers >= 0.5.5
                     , matrix     >= 0.2.0
  default-language:    Haskell2010

executable bench
  hs-source-dirs:      app
  main-is:             MainBench.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , euler >= 0.1
                     , criterion >= 1.1
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable euler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , euler
                     , criterion >= 1.1.0
                     , primes >= 0.2.1
                     , containers >= 0.5.5
                     , parallel >= 3.2
                     , optparse-applicative >= 0.11.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N2 -eventlog -O2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , euler
                     , primes >= 0.2.1
                     , hspec >= 2.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/name/project
